# grpc_mwe

./: README.md  generate_proto.sh  mwe.py  pyproject.toml  run_client.sh  run_server.sh
proto/: transfer.proto  transfer_pb2.py  transfer_pb2_grpc.py
